Fixes for spacing on hellomerci

--- a/assets/stylesheets/kitten/molecules/footer/_footer.scss
+++ b/assets/stylesheets/kitten/molecules/footer/_footer.scss
@@ -17,6 +17,8 @@
 @mixin k-Footer {
   .k-Footer {
     @include k-grid;
+    margin-top: k-px-to-rem(50px);
+    margin-bottom: k-px-to-rem(30px);
     text-align: center;
   }
 
